# lipidome_projector

./: .gitignore  README.md  pyproject.toml
additional_data/experiment_lipids/: README.md  experiment_lipid_vectors_100d.csv  experiment_lipid_vectors_tsne_2d.csv  experiment_lipid_vectors_tsne_3d.csv  experiment_lipids.csv
additional_data/vectors_100d/: README.md
additional_data/vectors_pca/: README.md
scripts/dataset_derivation/: README.md  drosophila_dataset_derivation.py  lamp3_dataset_derivation.py  yeast_dataset_derivation.py
scripts/vector_space/: README.md  dimensionality_reduction.py  postprocessing.py  preprocessing.py  training.py
src/embedding_visualization/: __init__.py  colors.py  figure_postprocessing.py  layout.py  marker_maps.py  parameters.py  px_scatter_generation.py  scatter_data.py  scatter_generation.py  single_trace_scatter_generation.py  symbols.py
src/lipid_data_processing/: __init__.py
src/lipid_data_processing/databases/: __init__.py  base_db_classes.py  generic_db.py  lmsd.py  swiss_lipids.py  unified_lmsd_sl.py
src/lipid_data_processing/lipidomes/: __init__.py  base_df_wrapper.py  lipid_abundances.py  lipid_features.py  lipidome_abundance_changes.py  lipidome_abundances.py  lipidome_dataset.py  lipidome_features.py
src/lipid_data_processing/notation/: __init__.py  matching.py  matching_summary.py  parsing.py
src/lipid_data_processing/structures/: __init__.py  structure_conversion.py  structure_io.py  structure_standardization.py
src/lipid_vector_space/: __init__.py
src/lipidome_projector/: __init__.py  main.py
(+85 files in other folders)
